--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@ body {
   width: 500px;
   height: 50%;
   overflow: hidden;
-  border: 0px solid #000;
+  border: 0px solid rgb(178, 3, 3);
   margin: 50px auto;
   padding: 10px;
 }
